tests/success/repeat1.avm
push int8(2)
rep
hdump
exit
;;
