tests/fail/mul_one_stack.avm
push int16(1)
mul
exit
